# dpachain

./: .env  .env2  .gitignore  Dockerfile  README.md  docker-compose-second-node.yml  docker-compose.yml  nodes_list.txt  pyproject.toml
config/: settings.py
docs/: admin-pu.puml  aktorzy.puml  diagram-fizycznej.puml  diagram_architektury.puml  diagram_bloku.puml  diagram_komponentow_architektury.puml  diagram_sekwencji.puml  diagram_sekwencji_nowy_blok.puml  diagram_sekwencji_startu.puml  klient-pu.puml  pracownik-pu.puml  prezentacja_WSZ.pptx  student-pu.puml  zmiany-do-zrobienia.txt
docs/uml/: admin-pu.puml  diagram-bloku-genesis.puml  diagram_bloku.puml  diagram_sekwencji.puml  diagram_sekwencji_nowy_blok.puml  pracodawca-pu.puml  pracownik-pu.puml
dpachain/: apps.py
dpachain-api/: .env2  Dockerfile  pyproject.toml
dpachain-api/signing_keys/: authenticated_keys.json  generate_signing_keys.py  generate_universities_generating_keys_script.py  generating_key.pem  generating_key.pub  keys_to_consume.json  own_key  own_key.pub  private  private.pub  second_key.pub  signing_key.pem  signing_key.pub  signing_key2.pem  signing_key2.pub
dpachain-api/src/: main.py
dpachain-app/: main.py
dpachain-app/pyinstaller_hooks/: hook-jtw.py
dpachain-frontend/: Dockerfile  package-lock.json  package.json
dpachain-frontend/src/: app.js  config.js
old/: block.py  main.py.old  university.py
peer/: additional_peer.py  nodes.txt  peer.py
signing_keys/: second_key
src/: main.py
src/api/: admin.py  main.py  routers.py  user.py  utils.py
src/block/: errors.py  (+4 more)
(+73 files in other folders)
