[tool.poetry]
name = "dpachain"
version = "0.1.0"
description = ""
authors = ["Wojciech Szade <wojciech.szade@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pymongo = "^4.10.1"
tenacity = "^9.0.0"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
