[tool.poetry]
name = "dpachain"
version = "0.1.0"
description = ""
authors = ["Wojciech Szade <wojciech.szade@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.9"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pymongo = "^4.10.1"
tenacity = "^9.0.0"
pydantic-settings = "^2.6.1"
python-multipart = "^0.0.19"
p2pd = "^3.1.0"
netifaces = "^0.11.0"
pycryptodomex = "^3.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
